// Vitest Snapshot v1

exports[`SignUp > matches snapshot in en 1`] = `
<div
  class="page auth signup"
>
  <h1>
    Register 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  <!--v-if-->
  
  
  <form
    novalidate=""
  >
    <div
      class="field email"
      placeholder="john.doe@example.com"
    >
      <label
        for="email"
      >
        Your email
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Your password
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Confirm your password
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Create my account
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <a
      class="login"
    >
      Login
    </a>
    <a
      class="reset"
    >
      Forgot password
    </a>
  </div>
  
</div>
`;

exports[`SignUp > matches snapshot in fr 1`] = `
<div
  class="page auth signup"
>
  <h1>
    Inscription 
    <!---->
  </h1>
  <div
    class="toolbar"
  >
    
    
  </div>
  
  <!--v-if-->
  
  
  <form
    novalidate=""
  >
    <div
      class="field email"
      placeholder="john.doe@example.com"
    >
      <label
        for="email"
      >
        Votre adresse e-mail
      </label>
      
      <input
        class=""
        name="email"
        tabindex="0"
        type="email"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Votre mot de passe
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Confirmez votre mot de passe
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <button>
        <svg
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6.5a9.77 9.77 0 0 1 8.82 5.5c-1.65 3.37-5.02 5.5-8.82 5.5S4.83 15.37 3.18 12A9.77 9.77 0 0 1 12 6.5m0-2C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zm0 5a2.5 2.5 0 0 1 0 5a2.5 2.5 0 0 1 0-5m0-2c-2.48 0-4.5 2.02-4.5 4.5s2.02 4.5 4.5 4.5s4.5-2.02 4.5-4.5s-2.02-4.5-4.5-4.5z"
            fill="currentColor"
          />
        </svg>
      </button>
      <!---->
      
    </div>
    <div
      class="actions"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            M'inscrire
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
  <div
    class="links"
  >
    <a
      class="login"
    >
      Connexion
    </a>
    <a
      class="reset"
    >
      Mot de passe oublié
    </a>
  </div>
  
</div>
`;
